--- a/Web-server/Server/package.json
+++ b/Web-server/Server/package.json
@@ -23,6 +23,7 @@
         "formidable": "^1.2.2",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.12.7",
+        "mysql": "^2.18.1",
         "nexmo": "^2.9.1",
         "nodemailer": "^6.6.0",
         "nodemailer-express-handlebars": "^4.0.0",
